Complete v1 of gulp spa seed creator
* Full Readme documentation
* livereload dev server
* production build/tarball
* html templating
* css/js preprocessor

--- a/src/views/partials/layout.jade
+++ b/src/views/partials/layout.jade
@@ -1,7 +1,9 @@
 doctype html
 html(lang="en")
   head
-    title SPA SEED
+    title= title
+    meta(charset="UTF-8")
+    block css
   body
     block content
     block js
